# chess

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  pyproject.toml
api/: main.py  schemas.py  session.py
api/routes/: rest.py  ws.py
engine/: board.py  constants.py  game.py  move.py  move_generator.py  zobrist.py
evaluators/: base.py  material.py  positional.py
search/: minimax.py
tests/: test_board.py  test_evaluators.py  test_game.py  test_move_generator.py  test_search.py
web/static/: game.js  style.css
web/templates/: index.html
